[package]
name = "cargo-ebuild"
version = "0.5.1-dev"
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/gentoo/cargo-ebuild"
homepage = "https://github.com/gentoo/cargo-ebuild"
documentation = "https://github.com/gentoo/cargo-ebuild"
readme = "README.md"
keywords = ["cargo-subcommand", "ebuild", "gentoo"]
categories = ["command-line-utilities"]
description = """
Generates an ebuild for a package using the in-tree eclasses.
"""

[[bin]]
name = "cargo-ebuild"
path = "src/main.rs"

[lib]
name = "cargo_ebuild"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.56"
cargo-lock = "7.0.1"
cargo_metadata = "0.14.2"
itertools = "0.10.3"
rustsec = "0.25.1"
structopt = "0.3.26"
serde = { version = "1.0.136", features = ["derive"] }
time = "0.3.9"

[dependencies.phf]
version = "0.10.1"
features = ["macros"]

[dependencies.tera]
version = "1.15.0"
default-features = false
