[package]
name = "cargo-ebuild"
version = "0.5.4"
authors = ["Doug Goldstein <cardoe@cardoe.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/gentoo/cargo-ebuild"
homepage = "https://github.com/gentoo/cargo-ebuild"
documentation = "https://github.com/gentoo/cargo-ebuild"
readme = "README.md"
keywords = ["cargo-subcommand", "ebuild", "gentoo"]
categories = ["command-line-utilities"]
description = """
Generates an ebuild for a package using the in-tree eclasses.
"""

[[bin]]
name = "cargo-ebuild"
path = "src/main.rs"

[lib]
name = "cargo_ebuild"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.56"
cargo-lock = "8.0.2"
cargo_metadata = "0.15.0"
itertools = "0.10.3"
rustsec = "0.26.0"
structopt = "0.3.26"
time = "0.3.9"

[dependencies.phf]
version = "0.11.0"
features = ["macros"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.tera]
version = "1.15.0"
default-features = false

[features]
default = ["vendored-libgit2"]
vendored-libgit2 = ["rustsec/vendored-libgit2"]
